--- a/src/components/Layout/Header/header.module.scss
+++ b/src/components/Layout/Header/header.module.scss
@@ -1,3 +1,15 @@
+@import 'src/styles/colors.scss';
+
 .wrapper {
   padding: 16px 15px 8px;
+  position: sticky;
+  top: 0;
+  background: $monoWhite;
+  display: grid;
+  grid-template-columns: 24px 1fr 24px;
+  justify-items: center;
+}
+
+.icon {
+  fill: $disabled;
 }
