--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,3 @@
-html,
-body {
-  font-family: Roboto, sans-serif;
-  font-size: 18px;
-  color: #000000d9;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -18,4 +11,13 @@ ul {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
 }
