feature: create base layout

--- a/src/components/common/Badge/badge.module.scss
+++ b/src/components/common/Badge/badge.module.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/colors';
+
 .wrapper {
   position: relative;
   display: flex;
@@ -6,11 +8,77 @@
 .dot {
   position: absolute;
   right: 2px;
-  top: 2px;
+  top: 0;
   width: 8px;
   height: 8px;
   border-radius: 50%;
 }
 
 .badge {
+  position: absolute;
+  top: 0;
+  left: calc(100% - 10px);
+  font-feature-settings: 'tnum';
+  border-radius: 10px;
+  min-width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 6px;
+}
+
+.smallBadge {
+  composes: badge;
+  min-width: 16px;
+  height: 16px;
+  padding: 0 4px;
+}
+
+.neutral {
+  background: $dividers;
+
+  span {
+    color: $secondary;
+  }
+}
+
+.selected {
+  background: $selected;
+
+  span {
+    color: $default;
+  }
+}
+
+.default {
+  background: $default;
+
+  span {
+    color: $monoWhite;
+  }
+}
+
+.green {
+  background: $success500;
+
+  span {
+    color: $monoWhite;
+  }
+}
+
+.red {
+  background: $error500;
+
+  span {
+    color: $monoWhite;
+  }
+}
+
+.disabled {
+  background: $background;
+
+  span {
+    color: $disabled;
+  }
 }
