--- a/src/components/Layout/TabBar/tab-bar.module.scss
+++ b/src/components/Layout/TabBar/tab-bar.module.scss
@@ -10,6 +10,7 @@
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.08);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  z-index: 1;
 }
 
 .item {
