--- a/src/components/common/Typography/Text/text.module.scss
+++ b/src/components/common/Typography/Text/text.module.scss
@@ -1,4 +1,4 @@
-@import "src/styles/colors";
+@import 'src/styles/colors';
 
 .text {
   color: $primary;
@@ -7,13 +7,11 @@
 }
 
 .textSecondary {
-  composes: text;
   font-size: 12px;
+  line-height: 18px;
   color: $secondary;
 }
 
 .textDisabled {
-  composes: text;
-  font-size: 12px;
   color: $disabled;
 }
