--- a/src/components/Products/products.module.scss
+++ b/src/components/Products/products.module.scss
@@ -1,16 +1,3 @@
-.wrapper {
-  padding-top: 24px;
-  display: grid;
-  grid-gap: 24px;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-}
-
-.product {
-  box-shadow: 0 0 4px rgba(60, 60, 60, 0.15);
-  padding: 24px;
-  border-radius: 4px;
-
-  p {
-    margin-bottom: 8px;
-  }
+.input {
+  margin-bottom: 8px;
 }
