--- a/src/components/common/Slider/slider.module.scss
+++ b/src/components/common/Slider/slider.module.scss
@@ -1,5 +1,4 @@
 .slider {
-  height: 180px;
   border-radius: 6px;
 }
 
@@ -8,4 +7,5 @@
   height: 100%;
   object-fit: cover;
   border-radius: 6px;
+  display: block;
 }
