feature: finish first components creation

--- a/src/components/common/Data Entry/Input/input.module.scss
+++ b/src/components/common/Data Entry/Input/input.module.scss
@@ -48,7 +48,7 @@
     padding-right: 30px;
   }
 
-  .icon {
+  + .icon {
     width: 14px;
     height: 14px;
   }
@@ -68,7 +68,7 @@
     padding-right: 32px;
   }
 
-  .icon {
+  + .icon {
     width: 16px;
     height: 16px;
   }
