--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,9 +9,9 @@ $primary: #3b3f4e;
 $title: #2c2f3a;
 
 $selected: #def7ec;
-$hover: #31c48d;
 $default: #0e9f6e;
-$pressed: #057a55;
+$hover: #31c48d;
+$active: #057a55;
 
 $default100: #f4f4f4;
 $default300: #d6d6d6;
