--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -4,8 +4,8 @@ $background: #f3f4f6;
 $dividers: #e8eaed;
 $border: #d0d3dc;
 $disabled: #b9bdca;
-$secondary: #4f5569;
-$primary: #3b3f4e;
+$secondary: #737b96;
+$primary: #4f5569;
 $title: #2c2f3a;
 
 $selected: #def7ec;
