--- a/src/views/pages/Group/group.module.scss
+++ b/src/views/pages/Group/group.module.scss
@@ -2,10 +2,18 @@
   margin-bottom: 24px;
 }
 
+.search {
+  margin-bottom: 16px;
+}
+
 .title {
   margin-bottom: 4px;
 }
 
 .count {
+  margin-bottom: 16px;
+}
+
+.tabs {
   margin-bottom: 16px;
 }
