feature: create a catalog with backend requests

--- a/src/views/common/Layout/TabBar/tab-bar.module.scss
+++ b/src/views/common/Layout/TabBar/tab-bar.module.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 8px 15px;
+  padding: 0 15px;
   background: $monoWhite;
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.08);
   display: grid;
@@ -16,6 +16,7 @@
 .item {
   display: grid;
   justify-items: center;
+  padding: 8px 0;
 
   .text {
     transition: color 0.3s;
@@ -25,15 +26,15 @@
     transition: fill 0.3s;
   }
 
-  &:hover {
-    .text {
-      color: $hover;
-    }
-
-    .icon {
-      fill: $hover;
-    }
-  }
+  //&:hover {
+  //  .text {
+  //    color: $hover;
+  //  }
+  //
+  //  .icon {
+  //    fill: $hover;
+  //  }
+  //}
 
   &:active {
     .text {
