feature: improve catalog item

--- a/src/views/pages/Product/product.module.scss
+++ b/src/views/pages/Product/product.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  padding-bottom: 64px;
 }
 
 .back {
@@ -22,4 +23,16 @@
 
 .slide {
   border-radius: 4px;
+}
+
+.name {
+  margin-bottom: 16px;
+}
+
+.descriptionTitle {
+  margin-bottom: 8px;
+}
+
+.descriptionText {
+  margin-bottom: 32px;
 }
