feature: add eslint and stylelint

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,4 @@
-$monoWhite: #ffffff;
+$monoWhite: #fff;
 $tableHeader: #f9f9f9;
 $background: #f3f4f6;
 $dividers: #e8eaed;
@@ -30,5 +30,5 @@ $warning300: #fcce73;
 $warning500: #faad14;
 
 $error100: #ffebeb;
-$error300: #ff9999;
+$error300: #f99;
 $error500: #ff4848;
