--- a/src/views/common/Layout/TabBar/tab-bar.module.scss
+++ b/src/views/common/Layout/TabBar/tab-bar.module.scss
@@ -2,19 +2,25 @@
 
 .wrapper {
   position: fixed;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
-  padding: 0 15px;
-  background: $monoWhite;
-  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.08);
+  z-index: 1;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  z-index: 1;
+  padding: 0 15px;
+  background: $monoWhite;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.08);
 }
 
 .tabBarExpansion {
   grid-column: 1 / 5;
+}
+
+.icon {
+  width: 26px;
+  height: 26px;
+  fill: $disabled;
 }
 
 .item {
@@ -61,10 +67,4 @@
   .icon {
     fill: $default;
   }
-}
-
-.icon {
-  fill: $disabled;
-  width: 26px;
-  height: 26px;
 }
