--- a/src/views/common/Layout/TabBar/TabBarExpansion/tab-bar-expansion.module.scss
+++ b/src/views/common/Layout/TabBar/TabBarExpansion/tab-bar-expansion.module.scss
@@ -1,21 +1,17 @@
-.enter {
-  height: 0;
-  opacity: 0;
-}
-
-.enterActive {
+.entering {
+  opacity: 1;
   transition: height 0.3s, opacity 0.3s 0.3s;
-  height: 56px; //TODO move to dynamically count content height (refs)
+}
+
+.entered {
   opacity: 1;
 }
 
-.exit {
-  height: 56px;
-  opacity: 1;
-}
-
-.exitActive {
+.exiting {
+  opacity: 0;
   transition: opacity 0.3s, height 0.3s 0.3s;
-  height: 0;
+}
+
+.exited {
   opacity: 0;
 }
