--- a/src/views/common/Layout/layout.module.scss
+++ b/src/views/common/Layout/layout.module.scss
@@ -2,3 +2,10 @@
   margin: 0 15px;
   padding: 8px 0 60px;
 }
+
+@media (min-width: 1024px) {
+  .main {
+    width: 930px;
+    margin: 0 auto;
+  }
+}
