--- a/src/views/pages/Home/Carousel/carousel.module.scss
+++ b/src/views/pages/Home/Carousel/carousel.module.scss
@@ -2,3 +2,10 @@
   height: 180px;
   margin-bottom: 8px;
 }
+
+@media (min-width: 1024px) {
+  .slider {
+    height: 320px;
+    margin-bottom: 32px;
+  }
+}
