--- a/src/views/common/Layout/Header/Additional/additional.module.scss
+++ b/src/views/common/Layout/Header/Additional/additional.module.scss
@@ -6,6 +6,7 @@
 
 @media (min-width: 1024px) {
   .wrapper {
+    z-index: 3;
     display: flex;
     justify-content: center;
     padding: 8px 0;
