--- a/src/views/common/Layout/Header/header.module.scss
+++ b/src/views/common/Layout/Header/header.module.scss
@@ -11,6 +11,10 @@
   background: $monoWhite;
 }
 
+.button {
+  display: none;
+}
+
 .icon {
   width: 24px;
   height: 24px;
@@ -23,10 +27,6 @@
   height: 16px;
 }
 
-.catalogLink {
-  display: none;
-}
-
 .search {
   grid-column: 1 / 4;
   order: 1;
@@ -35,15 +35,15 @@
 
 @media (min-width: 1024px) {
   .header {
+    z-index: 3;
     grid-auto-flow: column;
     grid-gap: 16px;
     grid-template-columns: auto auto 1fr auto;
-    width: 930px;
-    margin: 0 auto;
-    padding: 16px 0;
+    margin: 0;
+    padding: 16px calc(50% - 465px);
   }
 
-  .catalogLink {
+  .button {
     display: flex;
   }
 
