--- a/src/components/General/Typography/Title/title.module.scss
+++ b/src/components/General/Typography/Title/title.module.scss
@@ -4,27 +4,32 @@
   color: $title;
 }
 
-h1.title {
-  font-size: 36px;
-  line-height: 42px;
+.h1 {
+  font-size: 48px;
+  line-height: 54px;
 }
 
-h2.title {
-  font-size: 30px;
-  line-height: 36px;
+.h2 {
+  font-size: 40px;
+  line-height: 46px;
 }
 
-h3.title {
+.h3 {
+  font-size: 32px;
+  line-height: 38px;
+}
+
+.h4 {
   font-size: 24px;
   line-height: 34px;
 }
 
-h4.title {
+.h5 {
   font-size: 20px;
   line-height: 28px;
 }
 
-h5.title {
+.h6 {
   font-size: 16px;
   line-height: 22px;
 }
