--- a/src/components/Navigation/Menu/Item/item.module.scss
+++ b/src/components/Navigation/Menu/Item/item.module.scss
@@ -1,3 +1,37 @@
+@import 'src/styles/colors';
+
 .wrapper {
-  padding: 9px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 12px;
+  border-radius: 8px;
+  cursor: pointer;
+
+  &:hover {
+    background: $background;
+  }
+
+  &:active,
+  &.selected {
+    background: $selected;
+
+    .text {
+      color: $default;
+    }
+  }
+}
+
+.icon {
+  margin-left: 12px;
+}
+
+.normalWrapper {
+  composes: wrapper;
+  height: 32px;
+}
+
+.largeWrapper {
+  composes: wrapper;
+  height: 40px;
 }
