--- a/src/views/common/Layout/Header/Catalog/catalog.module.scss
+++ b/src/views/common/Layout/Header/Catalog/catalog.module.scss
@@ -23,7 +23,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(45, 45, 45, 0.65);
+  background: rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
 
 .dropdown {
@@ -31,7 +32,10 @@
   top: 112px;
   right: 0;
   left: 0;
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 210px 1fr;
   margin: auto;
-  padding: 12px calc(50% - 465px);
+  padding: 12px calc(50% - 465px) 32px;
   background: $monoWhite;
 }
