--- a/src/views/common/Layout/Footer/footer.module.scss
+++ b/src/views/common/Layout/Footer/footer.module.scss
@@ -1,14 +1,13 @@
 @import 'src/styles/colors';
 
 .footer {
-  display: none;
+  padding: 32px 15px 92px;
+  background: $background;
 }
 
 .columns {
   display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(4, 1fr);
-  width: 930px;
+  grid-gap: 32px;
 }
 
 .title {
@@ -25,24 +24,6 @@
   display: none;
 }
 
-.termsList {
-  display: flex;
-  width: 930px;
-}
-
-.term {
-  margin-right: 32px;
-
-  &:last-of-type {
-    margin-right: 0;
-    margin-left: auto;
-  }
-}
-
-.termText {
-  color: $disabled;
-}
-
 .icons {
   display: grid;
   grid-auto-flow: column;
@@ -51,13 +32,16 @@
   margin-top: 24px;
 }
 
+.toggleVersion {
+  margin: 24px 0 16px;
+}
+
 @media (min-width: 1024px) {
   .footer {
     display: flex;
     justify-content: center;
     margin-top: auto;
     padding: 42px 0 76px;
-    background: $background;
   }
 
   .terms {
@@ -65,5 +49,37 @@
     justify-content: center;
     padding: 12px 0;
     background: $dividers;
+  }
+
+  .columns {
+    grid-gap: 30px;
+    grid-template-columns: repeat(4, 1fr);
+    width: 930px;
+  }
+
+  .uniqueColumn {
+    order: 1;
+  }
+
+  .termsList {
+    display: flex;
+    width: 930px;
+  }
+
+  .term {
+    margin-right: 32px;
+
+    &:last-of-type {
+      margin-right: 0;
+      margin-left: auto;
+    }
+  }
+
+  .termText {
+    color: $disabled;
+  }
+
+  .toggleVersion {
+    display: none;
   }
 }
