--- a/src/views/pages/Group/group.module.scss
+++ b/src/views/pages/Group/group.module.scss
@@ -2,6 +2,10 @@
   margin-bottom: 24px;
 }
 
+.filters {
+  display: none;
+}
+
 .title {
   margin-bottom: 4px;
 }
@@ -12,4 +16,20 @@
 
 .tabs {
   margin-bottom: 16px;
+}
+
+@media (min-width: 1024px) {
+  .productsWrapper {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: 130px 1fr;
+  }
+
+  .tabs {
+    display: none;
+  }
+
+  .filters {
+    display: flex;
+  }
 }
