--- a/src/views/pages/Product/product.module.scss
+++ b/src/views/pages/Product/product.module.scss
@@ -2,37 +2,22 @@
   padding-bottom: 64px;
 }
 
-.back {
-  margin-bottom: 16px;
-}
+@media (min-width: 1024px) {
+  .wrapper {
+    display: grid;
+    grid-gap: 54px 30px;
+    grid-template-areas: 'b b' 'i p';
+  }
 
-.sliderWrapper {
-  position: relative;
-  margin-bottom: 16px;
-  padding: 50% 0;
-}
+  .bread {
+    grid-area: b;
+  }
 
-.slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-}
+  .image {
+    grid-area: i;
+  }
 
-.slide {
-  border-radius: 4px;
-}
-
-.name {
-  margin-bottom: 16px;
-}
-
-.descriptionTitle {
-  margin-bottom: 8px;
-}
-
-.descriptionText {
-  margin-bottom: 32px;
+  .params {
+    grid-area: p;
+  }
 }
