--- a/src/views/pages/Product/Description/description.module.scss
+++ b/src/views/pages/Product/Description/description.module.scss
@@ -9,6 +9,7 @@
 @media (min-width: 1024px) {
   .wrapper {
     display: grid;
+    grid-gap: 24px 30px;
     grid-template-areas: 'd s' 'd c' 'd e';
     grid-template-columns: 1fr 1fr;
   }
