feature: create navigation

--- a/src/components/Navigation/Menu/Item/item.module.scss
+++ b/src/components/Navigation/Menu/Item/item.module.scss
@@ -1,5 +1,19 @@
 @import 'src/styles/colors';
 
+.text {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.icon {
+  flex-shrink: 0;
+  width: 10px;
+  height: 10px;
+  margin-left: 12px;
+  fill: $secondary;
+}
+
 .wrapper {
   display: flex;
   align-items: center;
@@ -7,6 +21,7 @@
   padding: 0 12px;
   border-radius: 8px;
   cursor: pointer;
+  transition: background 0.3s;
 
   &:hover {
     background: $background;
@@ -19,11 +34,11 @@
     .text {
       color: $default;
     }
-  }
-}
 
-.icon {
-  margin-left: 12px;
+    .icon {
+      fill: $default;
+    }
+  }
 }
 
 .normalWrapper {
@@ -34,4 +49,14 @@
 .largeWrapper {
   composes: wrapper;
   height: 40px;
+}
+
+.disabled {
+  .text {
+    color: $disabled;
+  }
+
+  .icon {
+    fill: $disabled;
+  }
 }
