--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,6 +22,10 @@ h6 {
   font-weight: bold;
 }
 
+svg {
+  transition: fill 0.3s;
+}
+
 @media (min-width: 1024px) {
   #__next {
     display: flex;
