--- a/src/components/Data Display/Tag/tag.module.scss
+++ b/src/components/Data Display/Tag/tag.module.scss
@@ -5,7 +5,7 @@
   width: fit-content;
   border-radius: 6px;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s, border 0.3s;
+  transition: background-color 0.3s, border 0.3s;
 
   &.disabled {
     background: $background !important;
