style: fix products bottom margin

--- a/src/views/pages/Group/group.module.scss
+++ b/src/views/pages/Group/group.module.scss
@@ -19,6 +19,10 @@
 }
 
 @media (min-width: 1024px) {
+  .wrapper {
+    margin-bottom: 100px;
+  }
+
   .productsWrapper {
     display: grid;
     grid-gap: 30px;
