--- a/src/views/pages/Category/Image/image.module.scss
+++ b/src/views/pages/Category/Image/image.module.scss
@@ -27,3 +27,11 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+
+@media (min-width: 1024px) {
+  .label {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
