--- a/src/views/common/Layout/Header/Icons/icons.module.scss
+++ b/src/views/common/Layout/Header/Icons/icons.module.scss
@@ -4,30 +4,29 @@
   display: grid;
   grid-auto-flow: column;
   align-items: center;
-}
 
-.icon {
-  width: 24px;
-  height: 24px;
-  fill: $disabled;
-}
+  .icon {
+    width: 24px;
+    height: 24px;
+    fill: $disabled;
+  }
 
-.pcIcon {
-  composes: icon;
-  display: none;
+  .pcOnly {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) {
   .wrapper {
     grid-gap: 32px;
     padding-left: 16px;
-  }
 
-  .icon {
-    fill: $primary;
-  }
+    .icon {
+      fill: $primary;
+    }
 
-  .pcIcon {
-    display: flex;
+    .pcOnly {
+      display: flex;
+    }
   }
 }
