--- a/src/components/Data Entry/Input/input.module.scss
+++ b/src/components/Data Entry/Input/input.module.scss
@@ -68,7 +68,7 @@
     padding-right: 92px;
   }
 
-  + .icon {
+  ~ .icon {
     width: 14px;
     height: 14px;
   }
@@ -92,7 +92,7 @@
     padding-right: 92px;
   }
 
-  + .icon {
+  ~ .icon {
     width: 16px;
     height: 16px;
   }
