--- a/src/views/pages/Cart/Totals/totals.module.scss
+++ b/src/views/pages/Cart/Totals/totals.module.scss
@@ -5,14 +5,17 @@
 }
 
 .weight {
+  display: flex;
   margin-bottom: 32px;
 }
 
 .text {
+  display: flex;
   margin-bottom: 8px;
 }
 
 .total {
+  display: flex;
   margin-bottom: 32px;
   color: $title;
   font-size: 16px;
