--- a/src/views/pages/Checkout/checkout.module.scss
+++ b/src/views/pages/Checkout/checkout.module.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/colors';
+
 .back {
   display: block;
   margin-bottom: 16px;
@@ -6,4 +8,13 @@
 
 .title {
   margin-bottom: 32px;
+}
+
+.submit {
+  margin-bottom: 16px;
+}
+
+.comment {
+  color: $disabled;
+  text-align: center;
 }
