--- a/src/views/common/Layout/Header/header.module.scss
+++ b/src/views/common/Layout/Header/header.module.scss
@@ -33,6 +33,18 @@
   }
 }
 
+.simpleHeader {
+  display: flex;
+  justify-content: center;
+  padding: 16px 0 8px;
+
+  .logo {
+    display: flex;
+    width: auto;
+    height: 16px;
+  }
+}
+
 @media (min-width: 1024px) {
   .header {
     z-index: 3;
