--- a/src/components/Data Entry/Radio/radio.module.scss
+++ b/src/components/Data Entry/Radio/radio.module.scss
@@ -13,6 +13,19 @@
   line-height: 14px;
 }
 
+.withIcon {
+  padding-right: 50px;
+}
+
+.icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 24px;
+  height: 24px;
+  fill: $disabled;
+}
+
 .radio {
   position: absolute;
   top: 2px;
