--- a/src/components/Data Entry/Input/input.module.scss
+++ b/src/components/Data Entry/Input/input.module.scss
@@ -70,6 +70,8 @@
   }
 
   &:disabled {
+    color: $disabled;
+    background: $background;
     border: 1px solid $border;
     box-shadow: unset;
   }
