--- a/src/views/pages/Cart/Items/items.module.scss
+++ b/src/views/pages/Cart/Items/items.module.scss
@@ -8,70 +8,8 @@
   border-bottom: 1px solid $dividers;
 }
 
-.item {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-areas: 'l r';
-  grid-template-columns: 1fr 1fr;
-}
-
-.left {
-  display: grid;
-  grid-area: l;
-  grid-gap: 10px;
-  grid-template-columns: 16px 1fr;
-}
-
-.right {
-  grid-area: r;
-}
-
-.checkboxWrapper {
-  display: flex;
-  align-items: center;
-}
-
-.imageWrapper {
-  position: relative;
-  width: 100%;
-  padding: 50% 0;
-}
-
-.image {
-  position: absolute;
-  top: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  border-radius: 4px;
-}
-
-.price {
-  margin-bottom: 8px;
-  color: $title;
-}
-
-.name {
-  margin-bottom: 8px;
-  color: $primary;
-}
-
-.amount {
-  display: flex;
-  align-items: center;
-}
-
-.count {
-  input {
-    text-align: center;
+@media (min-width: 1024px) {
+  .wrapper {
+    border-bottom: none;
   }
-}
-
-.trash {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
-  margin-left: 24px;
-  fill: $disabled;
 }
