feature: tariffs request, design improvements and points on map

--- a/src/views/pages/Checkout/Totals/totals.module.scss
+++ b/src/views/pages/Checkout/Totals/totals.module.scss
@@ -33,3 +33,10 @@
   line-height: 28px;
   text-transform: uppercase;
 }
+
+@media (min-width: 1024px) {
+  .wrapper {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+}
