--- a/src/views/pages/Checkout/checkout.module.scss
+++ b/src/views/pages/Checkout/checkout.module.scss
@@ -18,3 +18,37 @@
   color: $disabled;
   text-align: center;
 }
+
+@media (min-width: 1024px) {
+  .wrapper {
+    display: grid;
+    grid-gap: 0 30px;
+    grid-template-areas: 'h h' 'i a';
+    grid-template-columns: 1fr 370px;
+  }
+
+  .head {
+    grid-area: h;
+  }
+
+  .info {
+    grid-area: i;
+  }
+
+  .aside {
+    display: grid;
+    grid-area: a;
+    grid-gap: 16px;
+    align-content: start;
+  }
+
+  .promocode {
+    order: 1;
+  }
+
+  .totals {
+    padding: 16px;
+    background: $tableHeader;
+    border-radius: 8px;
+  }
+}
