--- a/src/components/Feedback/Modal/modal.module.scss
+++ b/src/components/Feedback/Modal/modal.module.scss
@@ -10,7 +10,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.65);
-  transition: opacity 0.2s;
 }
 
 .wrapper {
@@ -25,7 +24,6 @@
 .overlay {
   height: 100%;
   background: $monoWhite;
-  transition: opacity 0.2s, transform 0.2s;
 }
 
 .header {
@@ -92,6 +90,10 @@
     text-align: center;
   }
 
+  .shadow {
+    transition: opacity 0.2s;
+  }
+
   .overlay {
     position: relative;
     top: 100px;
@@ -100,6 +102,7 @@
     height: auto;
     vertical-align: middle;
     border-radius: 8px;
+    transition: opacity 0.2s, transform 0.2s;
   }
 
   .inner {
