--- a/src/views/pages/RussianPost/russian-post.module.scss
+++ b/src/views/pages/RussianPost/russian-post.module.scss
@@ -34,14 +34,16 @@
 }
 
 .sectionTitleWrapper {
-  display: grid;
-  grid-template-columns: 1fr 16px;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
   height: 28px;
   margin-bottom: 16px;
 }
 
 .icon {
+  width: 16px;
+  height: 16px;
   fill: $disabled;
 }
 
