--- a/src/components/Feedback/Modal/modal.module.scss
+++ b/src/components/Feedback/Modal/modal.module.scss
@@ -22,7 +22,6 @@
 }
 
 .overlay {
-  height: 100%;
   background: $monoWhite;
 }
 
@@ -87,6 +86,7 @@
 
 @media (min-width: 1024px) {
   .wrapper {
+    padding-bottom: 24px;
     text-align: center;
   }
 
@@ -100,6 +100,7 @@
     display: inline-block;
     width: 450px;
     height: auto;
+    margin-bottom: 100px;
     vertical-align: middle;
     border-radius: 8px;
     transition: opacity 0.2s, transform 0.2s;
@@ -135,5 +136,6 @@
 
   .pcIcon {
     display: block;
+    cursor: pointer;
   }
 }
