--- a/src/views/pages/Map/map.module.scss
+++ b/src/views/pages/Map/map.module.scss
@@ -8,6 +8,69 @@
   left: 0;
   display: grid;
   grid-template-rows: auto 1fr;
+
+  :global([class*='clusterSmallIcon']) {
+    top: -15px !important;
+    left: -15px !important;
+    width: 26px !important;
+    height: 26px !important;
+    background: $monoWhite;
+    border: 2px solid $hover;
+    border-radius: 50%;
+
+    :global([class$='svg-icon-content']) {
+      top: 7px !important;
+      width: 26px !important;
+      height: 12px !important;
+      font-weight: bold !important;
+      font-size: 12px !important;
+      font-family: Inter, sans-serif !important;
+      line-height: 12px !important;
+      font-feature-settings: 'tnum' on, 'lnum' on;
+    }
+  }
+
+  :global([class*='clusterMediumIcon']) {
+    top: -18px !important;
+    left: -18px !important;
+    width: 32px !important;
+    height: 32px !important;
+    background: $monoWhite;
+    border: 2px solid $hover;
+    border-radius: 50%;
+
+    :global([class$='svg-icon-content']) {
+      top: 10px !important;
+      width: 32px !important;
+      height: 12px !important;
+      font-weight: bold !important;
+      font-size: 12px !important;
+      font-family: Inter, sans-serif !important;
+      line-height: 12px !important;
+      font-feature-settings: 'tnum' on, 'lnum' on;
+    }
+  }
+
+  :global([class*='clusterLargeIcon']) {
+    top: -23px !important;
+    left: -23px !important;
+    width: 40px !important;
+    height: 40px !important;
+    background: $monoWhite;
+    border: 3px solid $hover;
+    border-radius: 50%;
+
+    :global([class$='svg-icon-content']) {
+      top: 13px !important;
+      width: 40px !important;
+      height: 14px !important;
+      font-weight: bold !important;
+      font-size: 14px !important;
+      font-family: Inter, sans-serif !important;
+      line-height: 14px !important;
+      font-feature-settings: 'tnum' on, 'lnum' on;
+    }
+  }
 }
 
 .content {
