feature: create custom place marks

--- a/src/views/pages/Map/map.module.scss
+++ b/src/views/pages/Map/map.module.scss
@@ -71,6 +71,47 @@
       font-feature-settings: 'tnum' on, 'lnum' on;
     }
   }
+
+  :global([class$='image-with-content']) {
+    top: -28px !important;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box !important;
+    width: auto !important;
+    height: 24px !important;
+    padding: 0 6px 0 20px;
+    background-color: $monoWhite;
+    background-repeat: no-repeat;
+    background-position: 6px 50% !important;
+    background-size: 10px !important;
+    border: 2px solid $hover;
+    border-radius: 12px;
+    transform: translateX(-50%);
+
+    &::after {
+      position: absolute;
+      right: 0;
+      bottom: -6px;
+      left: 0;
+      width: 7px;
+      height: 4px;
+      margin: auto;
+      background: url('./assets/arrow.svg') no-repeat 50% 0;
+      content: '';
+    }
+
+    :global([class$='image-with-content-content']) {
+      position: static !important;
+      width: auto !important;
+      height: 12px !important;
+      color: $title;
+      font-weight: 600 !important;
+      font-size: 12px !important;
+      font-family: Inter, sans-serif !important;
+      line-height: 12px !important;
+      font-feature-settings: 'tnum' on, 'lnum' on;
+    }
+  }
 }
 
 .content {
