--- a/src/components/Data Entry/Select/Options/options.module.scss
+++ b/src/components/Data Entry/Select/Options/options.module.scss
@@ -12,8 +12,8 @@
 .options {
   position: absolute;
   z-index: 2;
-  display: grid;
-  grid-template-columns: 100%;
+  display: flex;
+  flex-direction: column;
   margin-top: 1px;
   padding: 4px 0;
   overflow: hidden;
@@ -21,6 +21,7 @@
   border: 1px solid $border;
   border-radius: 8px;
   filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.1));
+  transition: height 0.3s;
   will-change: opacity, height;
 }
 
