--- a/src/views/pages/Map/Panel/panel.module.scss
+++ b/src/views/pages/Map/Panel/panel.module.scss
@@ -104,14 +104,13 @@
   }
 
   .mainInfo {
-    grid-gap: 0 4px;
     margin-bottom: 12px;
     padding-bottom: 16px;
     border-bottom: 1px solid $dividers;
   }
 
   .name {
-    grid-column: 1;
+    grid-column: 1/3;
     color: $title;
     font-weight: bold;
     font-size: 20px;
@@ -119,7 +118,7 @@
   }
 
   .id {
-    grid-column: 2;
+    grid-column: 1/3;
   }
 
   .price {
