fix: fix cart ui

--- a/src/views/pages/Cart/cart.module.scss
+++ b/src/views/pages/Cart/cart.module.scss
@@ -24,6 +24,13 @@
 .deletion {
   margin-bottom: 16px;
   color: $error500;
+  transition: opacity 0.3s;
+}
+
+.deletionHidden {
+  composes: deletion;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .comment {
