--- a/src/views/pages/Checkout/TariffBlock/Addresses/addresses.module.scss
+++ b/src/views/pages/Checkout/TariffBlock/Addresses/addresses.module.scss
@@ -33,11 +33,16 @@
   }
 
   .group {
+    grid-gap: 16px;
     margin-bottom: auto;
   }
 
   .add {
     margin: 32px 0 16px;
+  }
+
+  .radio {
+    margin-bottom: 0;
   }
 
   .choose {
