--- a/src/components/Data Entry/Checkbox/checkbox.module.scss
+++ b/src/components/Data Entry/Checkbox/checkbox.module.scss
@@ -30,6 +30,7 @@
 .checkbox {
   position: relative;
   width: 16px;
+  min-width: 16px;
   height: 16px;
   background: $monoWhite;
   border: 1px solid $border;
