--- a/src/views/pages/authorization/Login/login.module.scss
+++ b/src/views/pages/authorization/Login/login.module.scss
@@ -19,3 +19,20 @@
 .linkText {
   color: $default;
 }
+
+.steps {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .wrapper {
+    width: 290px;
+    margin: 0 auto;
+  }
+
+  .steps {
+    display: flex;
+    margin: auto;
+    padding: 24px 0 16px;
+  }
+}
