--- a/src/views/pages/authorization/Code/code.module.scss
+++ b/src/views/pages/authorization/Code/code.module.scss
@@ -35,6 +35,13 @@
     border: 1px solid $border;
     border-radius: 8px;
     outline: none;
+    -moz-appearance: textfield;
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+      margin: 0;
+      -webkit-appearance: none;
+    }
   }
 }
 
@@ -50,4 +57,21 @@
 
 .signup {
   margin: 24px 0;
+}
+
+.steps {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .wrapper {
+    width: 290px;
+    margin: 0 auto;
+  }
+
+  .steps {
+    display: flex;
+    margin: auto;
+    padding: 24px 0 16px;
+  }
 }
