--- a/src/views/pages/showcase/Group/group.module.scss
+++ b/src/views/pages/showcase/Group/group.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   margin-bottom: 24px;
+  padding-top: 24px;
 }
 
 .filters {
@@ -21,6 +22,7 @@
 @media (min-width: 1024px) {
   .wrapper {
     margin-bottom: 100px;
+    padding-top: 0;
   }
 
   .productsWrapper {
