--- a/src/views/pages/showcase/Category/Image/image.module.scss
+++ b/src/views/pages/showcase/Category/Image/image.module.scss
@@ -21,11 +21,8 @@
 }
 
 .label {
-  display: -webkit-box;
-  overflow: hidden;
   text-align: center;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  word-wrap: break-word;
 }
 
 @media (min-width: 1024px) {
