--- a/src/components/Feedback/Modal/modal.module.scss
+++ b/src/components/Feedback/Modal/modal.module.scss
@@ -10,6 +10,12 @@
   background: rgba(0, 0, 0, 0.65);
 }
 
+.overlay {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .wrapper {
   position: fixed;
   top: 0;
@@ -20,15 +26,20 @@
 }
 
 .inner {
+  flex-grow: 1;
   background: $monoWhite;
 }
 
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   display: grid;
   grid-gap: 16px;
   grid-template-columns: 24px 1fr 24px;
   align-items: center;
   padding: 16px;
+  background: $monoWhite;
 }
 
 .icon {
@@ -90,6 +101,7 @@
   .overlay {
     position: relative;
     z-index: -1;
+    display: block;
     min-height: 100%;
     padding: 100px 0 24px;
   }
@@ -106,6 +118,7 @@
   }
 
   .header {
+    position: static;
     grid-template-columns: 32px 1fr 32px;
     margin-bottom: 48px;
     padding: 0;
