--- a/src/views/pages/showcase/Category/Content/content.module.scss
+++ b/src/views/pages/showcase/Category/Content/content.module.scss
@@ -24,6 +24,6 @@
   .images {
     display: grid;
     grid-gap: 32px 30px;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, calc(20% - 30px));
   }
 }
