--- a/src/views/pages/showcase/Product/Params/params.module.scss
+++ b/src/views/pages/showcase/Product/Params/params.module.scss
@@ -19,6 +19,11 @@
   margin-bottom: 32px;
 }
 
+.defaultPrice {
+  font-size: 32px;
+  line-height: 38px;
+}
+
 .newPrice {
   color: $default;
   font-size: 32px;
